# audiomoth-hid-rs

./: Cargo.toml  README.md
simple/: Cargo.toml
simple/src/: main.rs
src/: convert.rs  lib.rs
