[package]
name = "audiomoth-hid-rs"
version = "0.1.1"
edition = "2021"
authors = ["chping@iowk.com"]
description = "audiomoth-hid-rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cxping/audiomoth-hid-rs.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
hidapi = "1.4.1"
chrono = "0.4.19"
thiserror = "1.0.31"